--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
 __pycache__/
-*.pyc
+*.py[cod]
+*.so
+.Python
 .env
-venv/
 .venv/
+venv/
+env/
+build/
+dist/
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
 .cache/
 .ipynb_checkpoints
-.DS_Store
+mlruns/
 *.log
-dist/
-build/
+*.ckpt
+*.pth
+weights/
+.idea/
+.vscode/
+.DS_Store
