--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ requires-python = ">=3.8,<3.9"
 dependencies = [
     "decord>=0.6.0",
     "h5py>=3.11.0",
-    "mlflow>=2.15.0",
+    "mlflow>=2.17.2",
     "pyyaml>=6.0.0",
     "torch>=2.4.1",
     "torchaudio>=2.4.1",
+    "torchmetrics>=1.0.3",
     "torchvision>=0.19.1",
-    "torchmetrics>=1.4.0",
 ]
 
 [[tool.uv.index]]
@@ -21,3 +21,11 @@ default = true
 
 [[tool.uv.index]]
 url = "https://download.pytorch.org/whl/cu121"
+
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["p2igan_bench*"]
