--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ requires-python = ">=3.8,<3.9"
 dependencies = [
     "decord>=0.6.0",
     "h5py>=3.11.0",
+    "imageio>=2.35.1",
     "mlflow>=2.17.2",
     "pyyaml>=6.0.0",
     "torch>=2.4.1",
     "torchaudio>=2.4.1",
     "torchmetrics>=1.0.3",
     "torchvision>=0.19.1",
+    "tqdm>=4.66.5",
+    "zarr>=2.16.1",
 ]
 
 [[tool.uv.index]]
