--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,4 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["p2igan_bench*"]
+include = ["p2igan_bench*", "experiments*"]
